--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "localforage": "^1.10.0",
     "lunr": "^2.3.9",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
